# hipBench

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
cmake/: FileToString.cmake  FileToString.in  NVBenchConfigTarget.cmake  NVBenchDependencies.cmake  NVBenchDependentDlls.cmake  NVBenchExports.cmake  NVBenchInstallRules.cmake  NVBenchLibhipcxx.cmake  NVBenchRapidsCMake.cmake  NVBenchUtilities.cmake  NVBenchWriteConfigHeader.cmake
cmake/patches/: nlohmann_json.hpp
docs/: benchmarks.md  cli_help.md  cli_help_axis.md
examples/: CMakeLists.txt  auto_throughput.hip  axes.hip  enums.hip  exec_tag_sync.hip  exec_tag_timer.hip  skip.hip  stream.hip  throughput.hip
exec/: CMakeLists.txt  nvbench-ctl.hip
nvbench/: CMakeLists.txt  axes_metadata.cuh  axes_metadata.cxx  axis_base.cuh  axis_base.cxx  benchmark.cuh  benchmark_base.cuh  benchmark_base.cxx  benchmark_manager.cuh  benchmark_manager.cxx  blocking_kernel.cuh  blocking_kernel.hip  callable.cuh  config.cuh.in  cpu_timer.cuh  create.cuh  csv_printer.cuh  csv_printer.hip  cuda_call.cuh  cuda_call.hip  cuda_stream.cuh  cuda_timer.cuh  device_info.cuh  device_info.hip  device_manager.cuh  device_manager.hip  enum_type_list.cuh  exec_tag.cuh  flags.cuh  float64_axis.cuh  float64_axis.cxx  git_revision.cuh  int64_axis.cuh  int64_axis.cxx  json_printer.cuh  json_printer.cxx  json_printer.hip  launch.cuh  main.cuh  main.hip  (+27 more)
nvbench/detail/: device_scope.cuh  kernel_launcher_timer_wrapper.cuh  l2flush.cuh  measure_cold.cuh  measure_cold.hip  measure_hot.cuh  measure_hot.hip  ring_buffer.cuh  state_exec.cuh  state_generator.cuh  state_generator.cxx  statistics.cuh  throw.cuh  transform_reduce.cuh  type_list_impl.cuh
nvbench/internal/: markdown_table.cuh  table_builder.cuh
scripts/: nvbench_compare.py  nvbench_histogram.py  nvbench_walltime.py  test_cmp.json  test_ref.json
scripts/nvbench_json/: .gitignore  __init__.py  reader.py  version.py
testing/: CMakeLists.txt  axes_metadata.hip  benchmark.hip  cpu_timer.hip  create.hip  cuda_timer.hip  enum_type_list.hip  float64_axis.hip  int64_axis.hip  named_values.hip  option_parser.hip  range.hip  ring_buffer.hip  runner.hip  state.hip  state_generator.hip  string_axis.hip  test_asserts.cuh  type_axis.hip  type_list.hip
testing/cmake/: CMakeLists.txt
testing/cmake/test_export/: CMakeLists.txt  test_bench.hip
testing/device/: CMakeLists.txt  noisy_bench.hip
